--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,11 @@
               <input class="input is-medium" type="text" placeholder="Find your cool package name" v-model="query">
             </p>
             <p class="control">
-              <button class="button is-primary is-inverted is-outlined is-medium" type="submit">I'm feeling lucky</button>
+              <button class="button is-primary is-inverted is-outlined is-medium" type="submit">
+                <span class="icon">
+                  <i class="fa fa-rocket"></i>
+                </span>
+              </button>
             </p>
           </div>
         </form>
