--- a/static/index.html
+++ b/static/index.html
@@ -60,8 +60,8 @@
       <p class="container">
         <a class="tag is-medium" v-for="result in results"
           :class="result.available ? 'is-success' : 'is-danger'"
-          :href="(result.available ? 'https://www.npmjs.com/package/' : '#') + result.name"
-          :target="result.available ? '_blank' : null">
+          :href="(result.available || result.name === submit ? 'https://www.npmjs.com/package/' : '#') + result.name"
+          :target="result.available || result.name === submit ? '_blank' : null">
           <span class="icon"><i class="fa" :class="result.available ? 'fa-hand-peace-o' : 'fa-hand-stop-o'"></i></span>
           <span v-text="result.name"></span>
         </a>
